# claudegen

./: README.md  pyproject.toml
src/claudegen/: __init__.py  __main__.py  detector.py  generator.py
