[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudegen"
version = "0.1.1"
description = "Automatic CLAUDE.md generator — analyses your repo and writes it for you"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude", "anthropic", "claude-code", "CLAUDE.md", "generator", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

dependencies = []

[project.urls]
Homepage   = "https://github.com/Soren0608/claudegen"
Repository = "https://github.com/Soren0608/claudegen"
"Bug Tracker" = "https://github.com/Soren0608/claudegen/issues"

[project.scripts]
claudegen = "claudegen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claudegen"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE", "pyproject.toml"]
